<resources>
    <string name="app_name">ProFoodies</string>
    <string name="sign_up">Sign up</string>
    <string name="instagram_username">Username</string>
    <string name="enter_your_email">Enter your username</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">SIGN IN</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="skip">Skip</string>
    <string name="continues">Continue</string>
    <string name="next">Next</string>
    <string name="info_message">Only Instagram Users are allowed</string>
    <string name="info_title">Info</string>
    <string name="ok_button">OK</string>
    <string name="username_empty">username field should not be empty</string>
    <string name="password_empty">password field should not be empty</string>
    <string name="error_email">Please make sure email id is valid</string>
    <string name="error_password">Please make sure password should have max of 6 character</string>

</resources>
