<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewController"
            type="profoodies.com.profoodies.walkthrough.viewmodel.ViewController" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_background">

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />

        <Button
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:background="@android:color/transparent"
            android:onClick="@{viewController.skipBtnClick()}"
            android:text="@string/skip"
            android:textAllCaps="true"
            android:textColor="@color/dark_white"
            android:textSize="14sp" />

        <me.relex.circleindicator.CircleIndicator
            android:id="@+id/indicator"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            app:ci_drawable="@drawable/indicator_yellow_circle"
            app:ci_drawable_unselected="@drawable/indicator_grey_circle"
            app:ci_height="6dp"
            app:ci_margin="4dp"
            app:ci_width="6dp" />

        <Button
            android:id="@+id/continue_button"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:onClick="@{viewController.continueBtnClick()}"
            android:text="@string/continues"
            android:textAllCaps="true"
            android:textColor="@color/dark_white"
            android:textSize="14sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:onClick="@{viewController.nextBtnCLick()}"
            android:text="@string/next"
            android:textAllCaps="true"
            android:textColor="@color/dark_white"
            android:textSize="14sp" />
    </RelativeLayout>
</layout>