<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="profoodies.com.profoodies.login.model.UserLogin" />

        <variable
            name="Controller"
            type="profoodies.com.profoodies.login.viewmodel.LoginController" />
    </data>

        <RelativeLayout
            android:id="@+id/rl_login_parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_bg"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <ImageView
                android:layout_width="335dp"
                android:layout_height="200dp"
                android:layout_above="@+id/rl_login"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:src="@drawable/temp_logo"/>

            <RelativeLayout
                android:id="@+id/rl_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_alignParentBottom="true">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/userNameWrap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/instagram_username"
                    >
                    <profoodies.com.profoodies.customviews.CustomEditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_below="@+id/userNameWrap"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/ic_user"
                        android:drawablePadding="15dp"
                        android:inputType="textEmailAddress"
                        android:longClickable="false"
                        android:text="@={model.username}"
                        android:maxLines="1"
                        android:textSize="17sp"
                        />
                </android.support.design.widget.TextInputLayout>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/dark_grey"
                    android:layout_below="@+id/userNameWrap"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordWrap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/userNameWrap"
                    android:hint="@string/password"
                    >
                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_below="@+id/passwordWrap"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/ic_password"
                        android:drawablePadding="15dp"
                        android:inputType="textEmailAddress"
                        android:longClickable="false"
                        android:text="@={model.password}"
                        android:maxLines="1"
                        android:textSize="17sp"
                        />
                </android.support.design.widget.TextInputLayout>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/dark_grey"
                    android:layout_below="@+id/passwordWrap"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/passwordWrap"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/button_rounded_corner_border"
                    android:onClick="@{Controller.btnLoginClick(model)}"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </RelativeLayout>
        </RelativeLayout>
</layout>